--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,6 +32,7 @@ build_script:
 
 after_build:
   - mkdir Artifacts
+  - dir /s
   - xcopy /y /d "%APPVEYOR_BUILD_FOLDER%\main.exe" "%APPVEYOR_BUILD_FOLDER%\Artifacts" 
 
 artifacts:
