--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
 #  - "%SCONS_CACHE_ROOT%"
 
 install:
-#  - if defined VS call "%VS%" %ARCH%  # if defined - so we can also use mingw
+  - if defined VS call "%VS%" %ARCH%  # if defined - so we can also use mingw
 
 before_build:
   # Get Godot source and install the module
