--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,13 @@ os: Visual Studio 2019
 environment:
   HOME: "%HOMEDRIVE%%HOMEPATH%"
   MY_REPO_URL: "https://github.com/lawnjelly/ci_test"
-  #VS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
-  matrix:
-    - VS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
-      TARGET: release_debug
-      ARCH: amd64
+  VS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+  TARGET: release_debug
+  ARCH: amd64
+  #matrix:
+   # - VS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+    #  TARGET: release_debug
+     # ARCH: amd64
 
 #cache:
 #  - "%SCONS_CACHE_ROOT%"
